[gd_scene load_steps=4 format=3 uid="uid://ccore5bakbwv1"]

[ext_resource type="Script" path="res://Scenes/projectiles/laser.gd" id="1_n1i0n"]
[ext_resource type="Texture2D" uid="uid://bp3qjwv7dqvjc" path="res://graphics/projectiles/blue.png" id="1_sos2h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8h0d6"]
radius = 9.0
height = 158.0

[node name="Laser" type="Area2D"]
scale = Vector2(0.883226, 0.725311)
collision_layer = 8
collision_mask = 23
script = ExtResource("1_n1i0n")

[node name="Blue" type="Sprite2D" parent="."]
texture = ExtResource("1_sos2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8h0d6")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_timer_timeout"]
